--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --watch"
+    "start": "webpack serve --watch",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Basheer AlHalabi",
   "license": "ISC",
